--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,33 @@
 *.pyc
 .DS_Store
 *.pyc
+.DS_Store
+.DS_Store
+Docs/.DS_Store
+resources/.DS_Store
+resources/Vehicles/Textures/.DS_Store
+.DS_Store
+.idea/misc.xml
+.idea/Yandex2.iml
+__pycache__/main.cpython-39.pyc
+Docs/.DS_Store
+gameplay/.DS_Store
+gameplay/car_menu/__pycache__/car_menu.cpython-39.pyc
+resources/.DS_Store
+resources/Vehicles/.DS_Store
+resources/Vehicles/__pycache__/Vehicle.cpython-39.pyc
+resources/Vehicles/Textures/.DS_Store
+*.xml
+*.iml
+*.pyc
+.DS_Store
+.idea/misc.xml
+.idea/Yandex2.iml
+__pycache__/main.cpython-39.pyc
+Docs/.DS_Store
+gameplay/.DS_Store
+gameplay/car_menu/__pycache__/car_menu.cpython-39.pyc
+resources/.DS_Store
+resources/Vehicles/.DS_Store
+resources/Vehicles/__pycache__/Vehicle.cpython-39.pyc
+resources/Vehicles/Textures/.DS_Store
