--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,14 @@ resources/Vehicles/.DS_Store
 resources/Vehicles/__pycache__/Vehicle.cpython-39.pyc
 resources/Vehicles/Textures/.DS_Store
 /venv_loginova/
+Docs/.DS_Store
+*.pyc
+__pycache__/main.cpython-39.pyc
+.DS_Store
+*.pyc
+__pycache__/main.cpython-39.pyc
+Docs/.DS_Store
+*.pyc
+*.pyc
+*.pyc
+*.pyc
